<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="108dp"
                                    android:layout_marginBottom="2dp"
                                    android:layout_marginLeft="12dp"
                                    android:layout_marginRight="12dp"
                                    android:layout_marginTop="12dp"
                                    android:clickable="false"
                                    app:cardBackgroundColor="@color/white"
                                    app:cardCornerRadius="4dp"
                                    app:cardElevation="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/name_placeholder"
            android:textSize="18dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/email_placeholder"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:id="@+id/candidate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/candidate_placeholder"
            android:textColor="@color/dark_gray"/>


    </LinearLayout>


</android.support.v7.widget.CardView>



